Combined arduino control with curve editor

--- a/websockets/json-serial-bridge/public/servo-simple/src/index.html
+++ b/websockets/json-serial-bridge/public/servo-simple/src/index.html
@@ -4,15 +4,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>servo-simple</title>
+  <title></title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1>servo-simple</h1>
-  <div id="thing"></div>
-  <script defer src="../reconnecting-websocket.js"></script>
-  <script defer src="script.js"></script>
+  <h1></h1>
+  <script defer src="../../reconnecting-websocket.js"></script>
+  <script type="module" src="../dist/main.js"></script>
 </body>
 
 </html>
