--- a/websockets/json-serial-bridge/public/servo-simple/src/index.html
+++ b/websockets/json-serial-bridge/public/servo-simple/src/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1></h1>
+  <canvas id="myCanvas"></canvas>
   <script defer src="../../reconnecting-websocket.js"></script>
   <script type="module" src="../dist/main.js"></script>
 </body>
